优化权限管理
