# openapi/integration.openapi.json
@@ -359,35 +359,6 @@
         }
       }
     },
-    "/authorization/role/tree": {
-      "post": {
-        "tags": ["角色管理"],
-        "summary": "获取角色树",
-        "operationId": "tree",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/RoleQueryRequest"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "$ref": "#/components/schemas/BaseViewListRoleResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/authorization/role/page": {
       "post": {
         "tags": ["角色管理"],
@@ -555,35 +526,6 @@
               "*/*": {
                 "schema": {
                   "$ref": "#/components/schemas/BaseViewVoid"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/authorization/permission/tree": {
-      "post": {
-        "tags": ["权限管理"],
-        "summary": "获取权限树",
-        "operationId": "tree_1",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/PermissionQueryRequest"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "$ref": "#/components/schemas/BaseViewListPermissionResponse"
                 }
               }
             }
@@ -2308,8 +2250,9 @@
             "description": "权限备注信息"
           },
           "createdUserId": {
-            "type": "string",
-            "description": "创建人用户 ID"
+            "type": "integer",
+            "description": "创建人用户 ID",
+            "format": "int64"
           },
           "createdTime": {
             "type": "string",
@@ -2317,8 +2260,9 @@
             "format": "date-time"
           },
           "updatedUserId": {
-            "type": "string",
-            "description": "更新人用户 ID"
+            "type": "integer",
+            "description": "更新人用户 ID",
+            "format": "int64"
           },
           "updatedTime": {
             "type": "string",
@@ -2375,8 +2319,9 @@
             "description": "是否启用，0 表示启用，1 表示禁用"
           },
           "createdUserId": {
-            "type": "string",
-            "description": "创建人用户 ID"
+            "type": "integer",
+            "description": "创建人用户 ID",
+            "format": "int64"
           },
           "createdTime": {
             "type": "string",
@@ -2384,8 +2329,9 @@
             "format": "date-time"
           },
           "updatedUserId": {
-            "type": "string",
-            "description": "更新人用户 ID"
+            "type": "integer",
+            "description": "更新人用户 ID",
+            "format": "int64"
           },
           "updatedTime": {
             "type": "string",
@@ -2722,14 +2668,7 @@
         "description": "基础视图对象"
       },
       "RoleUpdateRequest": {
-        "required": [
-          "blackPermissionIds",
-          "code",
-          "id",
-          "name",
-          "type",
-          "whitePermissionIds"
-        ],
+        "required": ["code", "id", "name", "type"],
         "type": "object",
         "properties": {
           "id": {
@@ -2784,6 +2723,25 @@
           }
         },
         "description": "角色修改请求对象"
+      },
+      "PageRequestRoleQueryRequest": {
+        "type": "object",
+        "properties": {
+          "page": {
+            "type": "integer",
+            "description": "分页页码",
+            "format": "int32"
+          },
+          "size": {
+            "type": "integer",
+            "description": "分页大小",
+            "format": "int32"
+          },
+          "params": {
+            "$ref": "#/components/schemas/RoleQueryRequest"
+          }
+        },
+        "description": "分页请求对象"
       },
       "RoleQueryRequest": {
         "type": "object",
@@ -2841,47 +2799,6 @@
           }
         },
         "description": "角色查询请求对象"
-      },
-      "BaseViewListRoleResponse": {
-        "type": "object",
-        "properties": {
-          "code": {
-            "type": "integer",
-            "description": "错误码",
-            "format": "int32"
-          },
-          "message": {
-            "type": "string",
-            "description": "错误信息"
-          },
-          "data": {
-            "type": "array",
-            "description": "数据",
-            "items": {
-              "$ref": "#/components/schemas/RoleResponse"
-            }
-          }
-        },
-        "description": "基础视图对象"
-      },
-      "PageRequestRoleQueryRequest": {
-        "type": "object",
-        "properties": {
-          "page": {
-            "type": "integer",
-            "description": "分页页码",
-            "format": "int32"
-          },
-          "size": {
-            "type": "integer",
-            "description": "分页大小",
-            "format": "int32"
-          },
-          "params": {
-            "$ref": "#/components/schemas/RoleQueryRequest"
-          }
-        },
-        "description": "分页请求对象"
       },
       "PageViewRoleResponse": {
         "type": "object",
@@ -2991,13 +2908,7 @@
         "description": "角色删除请求对象"
       },
       "RoleCreateRequest": {
-        "required": [
-          "blackPermissionIds",
-          "code",
-          "name",
-          "type",
-          "whitePermissionIds"
-        ],
+        "required": ["code", "name", "type"],
         "type": "object",
         "properties": {
           "name": {
@@ -3087,6 +2998,25 @@
         },
         "description": "权限修改请求对象"
       },
+      "PageRequestPermissionQueryRequest": {
+        "type": "object",
+        "properties": {
+          "page": {
+            "type": "integer",
+            "description": "分页页码",
+            "format": "int32"
+          },
+          "size": {
+            "type": "integer",
+            "description": "分页大小",
+            "format": "int32"
+          },
+          "params": {
+            "$ref": "#/components/schemas/PermissionQueryRequest"
+          }
+        },
+        "description": "分页请求对象"
+      },
       "PermissionQueryRequest": {
         "type": "object",
         "properties": {
@@ -3143,47 +3073,6 @@
           }
         },
         "description": "权限查询请求对象"
-      },
-      "BaseViewListPermissionResponse": {
-        "type": "object",
-        "properties": {
-          "code": {
-            "type": "integer",
-            "description": "错误码",
-            "format": "int32"
-          },
-          "message": {
-            "type": "string",
-            "description": "错误信息"
-          },
-          "data": {
-            "type": "array",
-            "description": "数据",
-            "items": {
-              "$ref": "#/components/schemas/PermissionResponse"
-            }
-          }
-        },
-        "description": "基础视图对象"
-      },
-      "PageRequestPermissionQueryRequest": {
-        "type": "object",
-        "properties": {
-          "page": {
-            "type": "integer",
-            "description": "分页页码",
-            "format": "int32"
-          },
-          "size": {
-            "type": "integer",
-            "description": "分页大小",
-            "format": "int32"
-          },
-          "params": {
-            "$ref": "#/components/schemas/PermissionQueryRequest"
-          }
-        },
-        "description": "分页请求对象"
       },
       "PageViewPermissionResponse": {
         "type": "object",
